--- a/Kalc/styles.css
+++ b/Kalc/styles.css
@@ -1,31 +1,29 @@
-html {
+.calculator {
+    alignment: center;
     font-size: 300%;
 }
 
-.calculator {
-    alignment: center;
-}
-
-.display {
-}
-
-.current_input,
-.current_result {
+#current_input,
+#current_result {
     text-align: right;
 }
 
-.right_display {
+#right_display {
     margin-left: 70px;
+    float: right;
 }
 
-.current_operator {
-    vertical-align: middle;
+#current_operator {
     width: 50px;
     float: left;
     font-size: 200%;
 }
 
-.key_grid {
+.display {
+    border-color: cadetblue;
+}
+
+#key_grid {
     width: 100%;
     height: 100%;
 }
@@ -36,7 +34,11 @@ table, th, td {
 }
 
 button {
+    height: 100%;
     display: block;
     width: 100%;
-    height: 100%;
+}
+
+.key {
+
 }
