--- a/Kalc/styles.css
+++ b/Kalc/styles.css
@@ -1,32 +1,37 @@
-.calculator {
-    alignment: center;
-    font-size: 300%;
-    margin: auto;
+body {
+    /*background-image: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);*/
 }
 
-#current_input,
-#current_result {
+#calculator {
+    margin: 2em auto;
+    width: 600px;
+    border-radius: 12px;
+}
+
+#full_display {
+    background: #1A1A1D;
+    color: aliceblue;
+    font-size: 50px;
+    display: flow-root;
+}
+
+#right_display{
     text-align: right;
-}
-
-#right_display {
     margin-left: 70px;
     float: right;
+    display: inline;
 }
 
 #current_operator {
     width: 50px;
     float: left;
-    font-size: 200%;
-}
-
-.display {
-    border-color: cadetblue;
+    font-size: 100px;
 }
 
 #key_grid {
     width: 100%;
     height: 100%;
+    background: #6F2232;
 }
 
 table, th, td {
@@ -36,8 +41,11 @@ table, th, td {
 
 button {
     height: 100%;
-    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
     width: 100%;
+    background: transparent;
+    color: aliceblue;
 }
 
 .key {
