--- a/Kalc/styles.css
+++ b/Kalc/styles.css
@@ -15,6 +15,14 @@ body {
     display: flow-root;
 }
 
+.input_display_inactive {
+    color: red;
+}
+
+.input_display_active {
+    color: blue;
+}
+
 #right_display{
     text-align: right;
     margin-left: 70px;
